--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -21,9 +21,9 @@
         .Build(await _statisticsRepository.GetOrderStatistic(identityUser, null));
 }
 <!-- Page Heading -->
-<div class="d-sm-flex align-items-center justify-content-between mb-4">
+@*<div class="d-sm-flex align-items-center justify-content-between mb-4">
     <h1 class="h3 mb-0 text-gray-800">Главная страница</h1>
-</div>
+</div>*@
 
 <!-- Content Row -->
 <div class="row">
@@ -37,7 +37,7 @@
                         <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Свободных грузовиков</div>
                         <div class="h5 mb-0 font-weight-bold text-gray-800">
                         <a asp-controller="Truck" asp-action="IndexTruck" 
-                           asp-route-status="@TruckStatus.Free">40</a>
+                           asp-route-status="@TruckStatus.Free">@_statisticsRepository.GetStatusTruckCount(identityUser, TruckStatus.Free)</a>
                         </div>
                     </div>
                     <div class="col-auto">
@@ -56,7 +56,7 @@
                     <div class="col mr-2">
                         <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Сломанные грузовики</div>
                         <div class="h5 mb-0 font-weight-bold text-gray-800">
-                            <a asp-controller="Truck" asp-action="IndexTruck" asp-route-condition="@TruckCondition.IsBroken">20</a>
+                            <a asp-controller="Truck" asp-action="IndexTruck" asp-route-condition="@TruckCondition.IsBroken">@_statisticsRepository.GetConditionTruckCount(identityUser, TruckCondition.IsBroken)</a>
                         </div>
                     </div>
                     <div class="col-auto">
@@ -77,7 +77,7 @@
                         <div class="row no-gutters align-items-center">
                             <div class="col-auto">
                                 <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">
-                                    <a asp-controller="Order" asp-action="IndexOrder" asp-route-state="@OrderState.Open">20</a>
+                                    <a asp-controller="Order" asp-action="IndexOrder" asp-route-state="@OrderState.Open">@_statisticsRepository.GetStatusOrderCount(identityUser, OrderState.Open)</a>
 
                                 </div>
                             </div>
@@ -104,7 +104,7 @@
                     <div class="col mr-2">
                         <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Неоплаченные заказы</div>
                         <div class="h5 mb-0 font-weight-bold text-gray-800">
-                            <a asp-controller="Order" asp-action="IndexOrder" asp-route-paid="false">20</a>
+                            <a asp-controller="Order" asp-action="IndexOrder" asp-route-paid="false">@_statisticsRepository.GetPaidOrderCount(identityUser, false)</a>
 
                         </div>
                     </div>
