--- a/Views/Shared/SalaryPartial/_SalaryTablePartial.cshtml
+++ b/Views/Shared/SalaryPartial/_SalaryTablePartial.cshtml
@@ -40,7 +40,7 @@
                                     <i class="fa fa-ellipsis-v"></i>
                                 </button>
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                    <a asp-controller="Salar" asp-action="Details" asp-route-id="@_item.Id" class="dropdown-item">
+                                    <a asp-controller="Salary" asp-action="Details" asp-route-id="@_item.Id" class="dropdown-item">
                                         Подробнее
                                     </a>
                                     <a asp-controller="Salary" asp-action="Edit" class="dropdown-item" asp-route-item="@_item.Id">
