--- a/Views/Repair/RepairType.cshtml
+++ b/Views/Repair/RepairType.cshtml
@@ -1,7 +1,50 @@
-﻿
+﻿@using WebApp_TransportCompany.Repositories
+@inject IRepairRepository _repairRepository
+@inject IUserRepository _userRepository
 @{
-    ViewData["Title"] = "RepairType";
+    var _repairTypes = await _repairRepository.GetRepairTypes(await _userRepository.GetIdentityUser(User));
+}
+@section Styles{
+    <!-- Custom styles for this page -->
+    <link href="~/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
+    <!-- PNotify -->
+    <link href="~/css/pnotify/pnotify.custom.css" rel="stylesheet">
+}
+<!-- Button trigger modal -->
+<!-- Begin Page Content -->
+<div class="card shadow mb-4">
+
+    <div class="card-header py-3">
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#createModal">
+            Добавить тип ремонта
+        </button>
+    </div>
+    <div class="card-body">
+        <div class="table-responsive">
+            @{ await Html.RenderPartialAsync("~/Views/Shared/RepairPartial/_RepairTypeTablePartial.cshtml", _repairTypes);}
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="createModal" tabindex="-1" role="dialog" aria-labelledby="createModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="createModalLabel">Добавить новый тип ремонта</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                @{ await Html.RenderPartialAsync("~/Views/Shared/RepairPartial/_RepairTypeFormPartial.cshtml"); }
+            </div>
+
+        </div>
+    </div>
+</div>
+@section Scripts{
+    <partial name="~/Views/Shared/_DataTablesScriptsPartial.cshtml" />
 }
 
-<h1>RepairType</h1>
+
 
