--- a/Views/Shared/SalaryPartial/_SalaryFormPartial.cshtml
+++ b/Views/Shared/SalaryPartial/_SalaryFormPartial.cshtml
@@ -1,4 +1,77 @@
-﻿
-@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@using WebApp_TransportCompany.ViewModels
+@using WebApp_TransportCompany.Models.Enums
+@using WebApp_TransportCompany.Repositories
+@model SalaryFormViewModel
+@inject IUserRepository _userRepository
+@inject IDriverRepository _driverRepository
+@{ 
+    var _drivers = await _driverRepository.GetDrivers(await _userRepository.GetIdentityUser(User));
+} 
+    <form asp-controller="Salary" asp-action="Create" method="post">
+        <div class="form-group row">
+            <label asp-for="Salary.Driver" class="col-sm-3 col-form-label">Водитель:</label>
+            <div class="col-sm-9">
+                <select asp-for="DriverId" class="form-control">
+                    @{ 
+                        foreach(var _item in _drivers)
+                        {
+                            <option value="@_item.Id">@_item.Name @_item.Surname @_item.FirstPhone</option>
+                        }
+                    }
+                </select>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label asp-for="Salary.StartPeriod" class="col-sm-3 col-form-label">Начало:</label>
+            <div class="col-sm-9">
+                <input asp-for="Salary.StartPeriod" type="datetime" class="form-control" id="recipient-name">
+            </div>
+
+        </div>
+        <div class="form-group row">
+            <label asp-for="Salary.EndPeriod" class="col-sm-3 col-form-label">Конец:</label>
+            <div class="col-sm-9">
+                <input asp-for="Salary.EndPeriod" type="datetime" class="form-control" id="recipient-name">
+            </div>
+
+        </div>
+        <div class="form-group row">
+            <label asp-for="Salary.Amount" class="col-sm-3 col-form-label">Сумма:</label>
+            <div class="col-sm-9">
+                <input asp-for="Salary.Amount" type="number" class="form-control" id="recipient-name">
+            </div>
+
+        </div>
+        <div class="form-group row">
+            <label asp-for="Salary.WrittenOff" class="col-sm-3 col-form-label">Списано средств:</label>
+            <div class="col-sm-9">
+                <input asp-for="Salary.WrittenOff" type="number" class="form-control" />
+            </div>
+
+        </div>
+        <div class="form-group row">
+            <label asp-for="Salary.PaymentMethod" class="col-sm-3 col-form-label">Метод оплаты:</label>
+            <div class="col-sm-9">
+                <select asp-for="Salary.PaymentMethod" class="form-control" asp-items="@Html.GetEnumSelectList<PaymentMethod>()"></select>
+            </div>
+
+        </div>
+        <div class="form-group row">
+            <label asp-for="Salary.OperationDate" class="col-sm-3 col-form-label">Дата оплаты:</label>
+            <div class="col-sm-9">
+                <input asp-for="Salary.OperationDate" type="datetime" class="form-control" id="recipient-name">
+            </div>
+
+        </div>
+        <div class="form-group row">
+            <label asp-for="Salary.Note" class="col-sm-3 col-form-label">Примечание:</label>
+            <div class="col-sm-9">
+                <textarea asp-for="Salary.Note" class="form-control"></textarea>
+            </div>
+
+        </div>
+        <div class="modal-footer row justify-content-center">
+            <button type="button" class="btn btn-secondary col-sm-3" data-dismiss="modal">Закрыть</button>
+            <button type="submit" class="btn btn-primary col-sm-3">Добавить</button>
+        </div>
+    </form>
