Миграции, добавлен функционал добавления типов ремонта при регистрации

--- a/Views/Shared/RepairPartial/_RepairTypeTablePartial.cshtml
+++ b/Views/Shared/RepairPartial/_RepairTypeTablePartial.cshtml
@@ -18,7 +18,7 @@
                     <tr>
                         <td>@_item.Name</td>
                         <td>@_item.KilometersResource</td>
-                        <td>@_item.TimeResource</td>
+                        <td>@_item.TimeResourceMonth</td>
                         <td>
                             <div class="dropdown">
                                 <button class="btn btn-group" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
