--- a/Views/Shared/RepairPartial/_RepairTypeFormPartial.cshtml
+++ b/Views/Shared/RepairPartial/_RepairTypeFormPartial.cshtml
@@ -13,9 +13,9 @@
         </div>
     </div>
     <div class="form-group row">
-        <label asp-for="TimeResource.Days" class="col-sm-3 col-form-label">Временной ресурс(дней):</label>
+        <label asp-for="TimeResourceMonth" class="col-sm-3 col-form-label">Временной ресурс(дней):</label>
         <div class="col-sm-9">
-            <input asp-for="TimeResource.Days" type="number" class="form-control">
+            <input asp-for="TimeResourceMonth" type="number" class="form-control">
         </div>
     </div>
 
